--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       </div>
       <div>
         <label for="vTaxa">Valor da taxa de turismo: R$</label>
-        <input type="number" step="any" name="vTaxa" id="vTaxa">
+        <input type="number" name="vTaxa" id="vTaxa">
       </div>
       <div>
         <label for="nDiarias">Número de diárias: </label>
-        <input type="number" name="vDiarias" id="vDiarias">
+        <input type="number" name="nDiarias" id="nDiarias">
       </div>
       <div>
         <button onclick="clearTheArea()" type="reset">Limpar</button>
